[package]
name = "cacheproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1"
hyper = { version = "1", features = ["full"] }
http-body-util = "^0.1"
moka = {version = "0.12.7", features = ["future"]}
pin-project-lite = "0.2.14"
tokio = { version = "1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["default"]}
